# rss_emailer

./: Cargo.toml  README.md  config.example
.github/workflows/: build.yml  release.yml  rust.yml  tag-new-version.yml
src/: feed_history.rs  feed_mailer.rs  main.rs  rss_emailer_config.rs  rss_extensions.rs  rss_mailer_config.rs
