[package]
name = "rss_emailer"
authors = ["Kyle Buzby <kyle@buzby.dev>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
lettre = "0.9"
lettre_email = "0.9"
rss = "2.0.0"
toml = "0.5"
