[package]
name = "rss_emailer"
description = "Utility to check RSS feeds and email new posts to configured addresses."
license = "Apache-2.0"
authors = ["Kyle Buzby <kyle@buzby.dev>"]
version = "0.1.8"
edition = "2021"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
quick-xml = { version = "0.22.0", features = ["serialize"] }
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2.8"
rss = "2.0.0"
toml = "0.5"
home = "0.5"
log = "0.4"
simplelog = "0.11" 
